--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,51 +3,51 @@ version: '${project.version}'
 main: org.randomlima.ringcraftplus.RingCraftPlus
 api-version: '1.20'
 commands:
-  angmarhelmet:
+  rcpangmarhelmet:
     description: A command that gives the player The Witch King of Angmar.
     usage: /<command>
     permission: rcp.items
-  palantir:
+  rcppalantir:
     description: A command that gives the player Palantir.
     usage: /<command>
     permission: rcp.items
-  gondorhorn:
+  rcpgondorhorn:
     description: A command that gives the player the horn of Gondor.
     usage: /<command>
     permission: rcp.items
-  gandalfstaff:
+  rcpgandalfstaff:
     description: A command that gives the player Gandalf's staff.
     usage: /<command>
     permission: rcp.items
-  sarumanstaff:
+  rcpsarumanstaff:
     description: A command that gives the player Saruman's staff.
     usage: /<command>
     permission: rcp.items
-  galadrielphial:
+  rcpgaladrielphial:
     description: A command that gives the player Galadriel's Phial.
     usage: /<command>
     permission: rcp.items
-  radagaststaff:
+  rcpradagaststaff:
     description: A command that gives the player Radagast's Staff.
     usage: /<command>
     permission: rcp.items
-  wizardhat:
+  rcpwizardhat:
     description: A command that gives the player a wizzard hat.
     usage: /<command>
     permission: rcp.items
-  amogusring:
+  rcpamogusring:
     description: A command that gives the player the amogus ring.
     usage: /<command>
     permission: rcp.items
-  urukhaishield:
+  rcpurukhaishield:
     description: A command that gives the player the urukhai shield.
     usage: /<command>
     permission: rcp.items
-  urukhaisword:
+  rcpurukhaisword:
     description: A command that gives the player the urukhai sword.
     usage: /<command>
     permission: rcp.items
-  urukhaihelmet:
+  rcpurukhaihelmet:
     description: A command that gives the player the urukhai helmet.
     usage: /<command>
     permission: rcp.items
